k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-vulnerability-scanner
  labels:
    name: k8s-vulnerability-scanner
